--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@xyflow/react": "^12.10.0",
     "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
     "react": "^18.3.1",
